--- a/world/xapian-core/.artixlinux/pkgbase.yaml
+++ b/world/xapian-core/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: xapian-core
-  version: 1:1.4.27-1
-  arch:
-    - x86_64
-  pkgname:
-    - xapian-core
-    - xapian-core-docs
 actions:
   addRepo: world
   removeRepo: null
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:1.4.27-1
+    version: 1:1.4.29-1
     packages:
-      - xapian-core-1:1.4.27-1-x86_64.pkg.tar.zst
-      - xapian-core-docs-1:1.4.27-1-x86_64.pkg.tar.zst
+      - xapian-core-1:1.4.29-1-x86_64.pkg.tar.zst
+      - xapian-core-docs-1:1.4.29-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
