--- a/galaxy/lxappearance-obconf-gtk3/.artixlinux/pkgbase.yaml
+++ b/galaxy/lxappearance-obconf-gtk3/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
-pkgbase:
-  name: lxappearance-obconf-gtk3
-  version: 0.2.3-4.1
-  arch:
-    - x86_64
-  pkgname:
-    - lxappearance-obconf-gtk3
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 0.2.3-4
+    version: 0.2.4-1
     packages:
-      - lxappearance-obconf-gtk3-0.2.3-4-x86_64.pkg.tar.zst
+      - lxappearance-obconf-gtk3-0.2.4-1-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
