--- a/world/dolphin/PKGBUILD
+++ b/world/dolphin/PKGBUILD
@@ -5,7 +5,7 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=dolphin
-pkgver=25.04.1
+pkgver=25.04.2
 pkgrel=1
 pkgdesc='KDE File Manager'
 arch=(x86_64)
@@ -50,13 +50,14 @@ optdepends=('ffmpegthumbs: video thumbnails'
             'kde-cli-tools: for editing file type options'
             'kdegraphics-thumbnailers: PDF and PS thumbnails'
             'kdenetwork-filesharing: samba usershare properties menu'
-            'kio-admin: for managing files as administrator' 
+            'kio-admin: for managing files as administrator'
+            'kompare: comparing files menu action'
             'konsole: terminal panel'
             'purpose: share context menu')
 groups=(kde-applications
         kde-system)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('1da30767f62d78edc9b556305c98aac89e063249e432735d2dd478d322e45add'
+sha256sums=('8c83c4937b7b47935b778ecd01a7d41da0626e7813da63345157d57d087297f0'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
