--- a/world/kdepim-addons/PKGBUILD
+++ b/world/kdepim-addons/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kdepim-addons
-pkgver=25.04.1
-pkgrel=2
+pkgver=25.04.2
+pkgrel=1
 pkgdesc='Addons for KDE PIM applications'
 arch=(x86_64)
 url='https://kontact.kde.org'
@@ -16,7 +16,7 @@ depends=(akonadi-calendar
          discount
          gcc-libs
          glibc
-         gpgme
+         gpgmepp
          grantleetheme
          incidenceeditor
          kcalendarcore
@@ -61,7 +61,7 @@ depends=(akonadi-calendar
          messagelib
          pimcommon
          prison
-         qgpgme-qt6
+         qgpgme
          qt6-base
          qt6-declarative
          qt6-webengine
@@ -74,7 +74,7 @@ makedepends=(corrosion
 groups=(kde-applications
         kde-pim)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('de5bfa0c44630f7fcbb6addff91aee3cf5bd675abe34a8b6ce1a39e404b7df72'
+sha256sums=('97dc393e8dc941fa4119a22eb75eed08bf4eb7d281941f879e3a8ba230ffb033'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
