--- a/world/kmime/.artixlinux/pkgbase.yaml
+++ b/world/kmime/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,9 +29,9 @@ repos:
     packages: []
     debug: []
   world:
-    version: 25.04.1-1.1
+    version: 25.04.2-1.1
     packages:
-      - kmime-25.04.1-1.1-x86_64.pkg.tar.zst
+      - kmime-25.04.2-1.1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
