--- a/world/messagelib/PKGBUILD
+++ b/world/messagelib/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=messagelib
-pkgver=25.04.1
-pkgrel=2
+pkgver=25.04.2
+pkgrel=1
 pkgdesc='KDE PIM messaging library'
 arch=(x86_64)
 url='https://kontact.kde.org'
@@ -48,7 +48,7 @@ depends=(akonadi-contacts
          libkleo
          openssl
          pimcommon
-         qgpgme-qt6
+         qgpgme
          qt6-base
          qt6-webengine
          sonnet
@@ -58,7 +58,7 @@ makedepends=(doxygen
              qt6-doc
              qt6-tools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('92f0e1fe2ac1b8cb53168e18709c203d43cccdae382d0895b3e2846757df0770'
+sha256sums=('7354aea72b25c2ed92db1dcb89d9f5f5b82ba2b382979d0d1303c47716561a05'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
