--- a/galaxy/box2d/.artixlinux/pkgbase.yaml
+++ b/galaxy/box2d/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: box2d
-  version: 3.1.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - box2d
 actions:
   addRepo: galaxy
   removeRepo: null
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 3.1.0-1
+    version: 3.1.1-1
     packages:
-      - box2d-3.1.0-1-x86_64.pkg.tar.zst
+      - box2d-3.1.1-1-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
