--- a/world/audacity/.artixlinux/pkgbase.yaml
+++ b/world/audacity/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
-pkgbase:
-  name: audacity
-  version: 1:3.7.3-2
-  arch:
-    - x86_64
-  pkgname:
-    - audacity
-    - audacity-docs
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:3.7.3-2
+    version: 1:3.7.3-3
     packages:
-      - audacity-1:3.7.3-2-x86_64.pkg.tar.zst
-      - audacity-docs-1:3.7.3-2-x86_64.pkg.tar.zst
+      - audacity-1:3.7.3-3-x86_64.pkg.tar.zst
+      - audacity-docs-1:3.7.3-3-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
