--- a/world/ffmpeg/.artixlinux/pkgbase.yaml
+++ b/world/ffmpeg/.artixlinux/pkgbase.yaml
@@ -29,11 +29,10 @@ repos:
     packages: []
     debug: []
   world:
-    version: 2:7.1.1-3
+    version: 2:7.1.1-4
     packages:
-      - ffmpeg-2:7.1.1-3-x86_64.pkg.tar.zst
-    debug:
-      - ffmpeg-debug-2:7.1.1-3-x86_64.pkg.tar.zst
+      - ffmpeg-2:7.1.1-4-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
