--- a/world/ffmpeg4.4/.artixlinux/pkgbase.yaml
+++ b/world/ffmpeg4.4/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: ffmpeg4.4
-  version: 4.4.5-5
-  arch:
-    - x86_64
-  pkgname:
-    - ffmpeg4.4
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 4.4.5-5
+    version: 4.4.6-1
     packages:
-      - ffmpeg4.4-4.4.5-5-x86_64.pkg.tar.zst
+      - ffmpeg4.4-4.4.6-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
