--- a/world/libheif/PKGBUILD
+++ b/world/libheif/PKGBUILD
@@ -4,11 +4,11 @@
 
 pkgname=libheif
 pkgver=1.19.8
-pkgrel=1
+pkgrel=3
 pkgdesc='An HEIF and AVIF file format decoder and encoder'
 arch=(x86_64)
 url='https://github.com/strukturag/libheif'
-license=(GPL3)
+license=(LGPL-3.0-or-later)
 provides=('libheif.so')
 makedepends=(cmake
              dav1d
@@ -17,6 +17,7 @@ makedepends=(cmake
              git
              libjpeg-turbo
              libpng
+             libtiff
              rav1e
              svt-av1)
 depends=(aom
@@ -33,14 +34,6 @@ optdepends=('libjpeg-turbo: for heif-convert and heif-enc'
             'svt-av1: svt-av1 encoder')
 source=(git+https://github.com/strukturag/libheif#tag=v$pkgver)
 sha256sums=('b77dfccd82588bcce71615d55d731aca5452d36b70c4127102ac0798cf022970')
-
-prepare() {
-  cd "$pkgname"
-
-  # https://gitlab.archlinux.org/archlinux/packaging/packages/libheif/-/issues/2
-  git cherry-pick -n \
-    '9839c993abdf61e8da28f5ee0f8bbfcf3d24c528'
-}
 
 build() {
   cmake -B build -S $pkgname \
