--- a/world/vifm/PKGBUILD
+++ b/world/vifm/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Carl Smedstad <carsme@archlinux.org>
 
 pkgname=vifm
-pkgver=0.14.2
+pkgver=0.14.3
 pkgrel=1
 pkgdesc="A file manager with curses interface, which provides Vi[m]-like environment"
 arch=('x86_64')
@@ -13,12 +13,13 @@ depends=(
   'file'
   'glib2'
   'glibc'
+  'hicolor-icon-theme'
   'ncurses'
 )
 makedepends=('perl')
 changelog=$pkgname.changelog
 source=("https://github.com/vifm/vifm/releases/download/v$pkgver/$pkgname-$pkgver.tar.bz2"{,.asc})
-sha256sums=('cd1b05d2543cdf6829d60b23bc225c6fde13d3ef7c1008f821b9209837f1e2b0'
+sha256sums=('16a9be1108d6a5a09e9f947f7256375e519ba41ebe9473659b20739fdbf3440e'
             'SKIP')
 validpgpkeys=('22349CDBE5227D2108A5667799DC5E4DB05F6BE2') # xaizek <xaizek@posteo.net>
 
