--- a/world/python-aiohttp/.artixlinux/pkgbase.yaml
+++ b/world/python-aiohttp/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,9 +29,9 @@ repos:
     packages: []
     debug: []
   world:
-    version: 3.12.11-1.1
+    version: 3.12.12-1
     packages:
-      - python-aiohttp-3.12.11-1.1-x86_64.pkg.tar.zst
+      - python-aiohttp-3.12.12-1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
