--- a/world/python-crispy-bootstrap5/.artixlinux/pkgbase.yaml
+++ b/world/python-crispy-bootstrap5/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: world
-pkgbase:
-  name: python-crispy-bootstrap5
-  version: 2025.4-1
-  arch:
-    - any
-  pkgname:
-    - python-crispy-bootstrap5
 actions:
   addRepo: world
   removeRepo: null
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2025.4-1
+    version: 2025.6-1
     packages:
-      - python-crispy-bootstrap5-2025.4-1-any.pkg.tar.zst
+      - python-crispy-bootstrap5-2025.6-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
