--- a/world/rabbitmq/.artixlinux/pkgbase.yaml
+++ b/world/rabbitmq/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
-pkgbase:
-  name: rabbitmq
-  version: 4.1.0-3
-  arch:
-    - any
-  pkgname:
-    - rabbitmq
-    - rabbitmqadmin
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 4.1.0-3
+    version: 4.1.1-1
     packages:
-      - rabbitmq-4.1.0-3-any.pkg.tar.zst
-      - rabbitmqadmin-4.1.0-3-any.pkg.tar.zst
+      - rabbitmq-4.1.1-1-any.pkg.tar.zst
+      - rabbitmqadmin-4.1.1-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
