--- a/world/rabbitmq/PKGBUILD
+++ b/world/rabbitmq/PKGBUILD
@@ -13,13 +13,14 @@ pkgname=(
   rabbitmq
   rabbitmqadmin
 )
-pkgver=4.1.0
-pkgrel=3
+pkgver=4.1.1
+pkgrel=1
 pkgdesc='Highly reliable and performant enterprise messaging implementation of AMQP written in Erlang/OTP'
 url='https://rabbitmq.com'
 arch=('any')
 license=('MPL-2.0')
 makedepends=(
+  '7zip'
   'elixir'
   'erlang-eldap'
   'erlang-erts'
@@ -46,19 +47,18 @@ makedepends=(
   'unzip'
   'util-linux'
   'xmlto'
-  'zip'
 )
-_commit=293a4f665ac59c6d53732a18340a76e69c257ea8
+_commit=0fa5c106f69daf6bda3feb6610fb85ceae6a813f
 source=(
-  "git+https://github.com/rabbitmq/rabbitmq-server.git#commit=${_commit}"
+  "git+https://github.com/rabbitmq/rabbitmq-server.git#commit=${_commit}?signed"
   rabbitmq-devendor-rebar3.patch
   rabbitmq-env.conf
   rabbitmq.sysusers
   rabbitmq.tmpfiles
   rabbitmq.logrotate
 )
-sha512sums=('ac6e468bb4e6324b9531a382f9cd67371df297954d935d89d24b3ea702d08eea1658646582d516d522ef6a815d33236fa5437df1f00d36dad9d5307567ad57b3'
-            '67eca945ac5c5acf5f64f52ec65803a7b2ea098e6b38a685a0d85b8a91db907782dffb2e1facff6fa5dbf21d6b71fae6eced13ea9c714a27d167259080523d34'
+sha512sums=('84691d957b202510f0ea89a2303f2872f3b16c6c39d3b85bc5de4aca60b296cb791472d64dba2f27dd2896a3357cb645a8f667c1f2eeb372fceb4267ed59a3b2'
+            'a13f9c9d6fbff3b5356a2bf10f85cc9d44f991c8f145b57825f39119e65db7e06341d52f19f209d4968c33bed37b193996b321a0727364b79e7127fb70c74bd5'
             '8b841e28fa0a1424dd9e57c0988e015f3cd4cccef0f73ccdb7c7b66d11ca62ba8ef3a59c7ca5e5f0c9c9d8003ac72bf53785985d98aae867961787003286e179'
             '33c6af8810d8cbc479c63ed535de0a27b2e90eeed8fc9b39255683028478529a7e8953aa992f615d4101c6aefdc066f95c98fb9fb5bf1faf0ea327364101914c'
             '5cbef5497029ff227050c6f18c4fcc35b3922747408d01b7590f096253af82a8a8f16008efcc8ea21f970ce87244de62e2e375f65c49e407e53440eada5d7114'
@@ -67,6 +67,7 @@ validpgpkeys=(
   '0A9AF2115F4687BD29803A206B73A36E6026DFCA' # RabbitMQ Release Signing Key <info@rabbitmq.com>
   '968479A1AFF927E37D1A566BB5690EEEBB952194' # GitHub <noreply@github.com>
   '1CD01B692130F8E525601C8A44BF2725475205B2' # Michael Klishin <michaelklishin@icloud.com>
+  '85703625C06128939EEA616A16AB14D00D613900' # Michael Klishin <michaelklishin@icloud.com>
 )
 
 prepare() {
