--- a/world/nvidia-utils/.artixlinux/pkgbase.yaml
+++ b/world/nvidia-utils/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,12 +29,12 @@ repos:
     packages: []
     debug: []
   world:
-    version: 575.57.08-1
+    version: 575.57.08-3
     packages:
-      - nvidia-utils-575.57.08-1-x86_64.pkg.tar.zst
-      - opencl-nvidia-575.57.08-1-x86_64.pkg.tar.zst
-      - nvidia-dkms-575.57.08-1-x86_64.pkg.tar.zst
-      - nvidia-open-dkms-575.57.08-1-x86_64.pkg.tar.zst
+      - nvidia-utils-575.57.08-3-x86_64.pkg.tar.zst
+      - opencl-nvidia-575.57.08-3-x86_64.pkg.tar.zst
+      - nvidia-dkms-575.57.08-3-x86_64.pkg.tar.zst
+      - nvidia-open-dkms-575.57.08-3-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
