--- a/galaxy/claws-mail/.artixlinux/pkgbase.yaml
+++ b/galaxy/claws-mail/.artixlinux/pkgbase.yaml
@@ -2,11 +2,11 @@
 team: galaxy
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -54,7 +54,7 @@ repos:
     packages: []
     debug: []
   galaxy:
-    version: 4.3.1-3
+    version: 4.3.1-3.1
     packages:
-      - claws-mail-4.3.1-3-x86_64.pkg.tar.zst
+      - claws-mail-4.3.1-3.1-x86_64.pkg.tar.zst
     debug: []
